# building-earth

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  main.py  plotting.py  pyproject.toml
.claude/skills/debug-convergence/: SKILL.md
.claude/skills/debug-physics/: SKILL.md  perturb_cell.py
.claude/skills/evaluate-branch/: SKILL.md
.claude/skills/run-diagnostic/: SKILL.md
backend/: AGENTS.md  CLAUDE.md  eval.py  export_city_lights.py  export_frontend_data.py  main.py  onboarding_stages.py  run_cli_test.py  scenario_compare.py
backend/climate_sim/: plotting.py
backend/climate_sim/core/: grid.py  interpolation.py  math_core.py  operators.py  postprocess.py  rhs_builder.py  solver.py  state.py  timing.py  units.py
backend/climate_sim/data/: calendar.py  constants.py  (+2 more)
backend/debug/: cloud_decomposition.py  pressure_decomposition.py  temperature_distributions.py  wind_decomposition.py
backend/export_frontend_data/: __init__.py  __main__.py  downsample_for_mobile.py  full_export.py  onboarding_export.py  shared.py
backend/server/: calculate.py  climate_data.py  main.py  prompts.py  rate_limit.py  tools.py
frontend/: .env.production  CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: prepare_stars.py
frontend/src/: App.svelte  app.css  main.ts
modeling/: radiation.py
notes/: diffusion_brainstorm.md
src/: cli_test.py  eval.py  main.py  run_cli_test.py  scenario_compare.py  wind.py
src/climate_sim/: __init__.py  plotting.py
tests/: test_math_utils.py  test_plotting.py
(+111 files in other folders)
