[project]
name = "2025-proj0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.25.0",
    "cmocean>=4.0.3",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "rioxarray>=0.19.0",
    "scipy>=1.16.2",
    "xarray>=2025.10.1",
    "pillow>=10.0.0",
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
